[package]
name = "rslisp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.2.0"
custom_error = "1.9.2"
clap = { version = "3.2.5", features = ["derive"] }

[dependencies.nom]
version = "6.2"
features = ["alloc", "regexp"]
